Project TOC_webpage {
  database_type: 'PostgreSQL'
  Note: '''
    # TheOld - Crafters webpage
    **The database of the webpage built with Django**
  '''
}

Table "news_category" {
  "id" bigint [pk, not null, increment]
  "name" varchar(50) [not null]
}

Table "news_new" {
  "id" bigint [pk, not null, increment]
  "title" varchar(50) [not null]
  "body" text [not null]
  "date" date [not null]
  "image" varchar(100)
  "sign" varchar(30) [not null]
}

Table "news_new_categorys" {
  "id" bigint [pk, not null, increment]
  "new_id" bigint [not null]
  "category_id" bigint [not null]

Indexes {
  new_id [name: "news_new_categorys_new_id_df3646e1"]
  category_id [name: "news_new_categorys_category_id_7113e576"]
}
}

Table "navpages_page" {
  "id" bigint [pk, not null, increment]
  "title" varchar(50) [not null]
  "path" varchar(50) [not null]
  "body" text [not null]
  "isDropdown" boolean [not null]
}

Table "django_admin_log" {
  "id" integer [pk, not null, increment]
  "action_time" timestamp [not null]
  "object_id" text
  "object_repr" varchar(200) [not null]
  "action_flag" smallint [not null]
  "change_message" text [not null]
  "content_type_id" integer
  "user_id" integer [not null]

Indexes {
  content_type_id [name: "django_admin_log_content_type_id_c4bce8eb"]
  user_id [name: "django_admin_log_user_id_c564eba6"]
}
}

Table "auth_permission" {
  "id" integer [pk, not null, increment]
  "name" varchar(50) [not null]
  "content_type_id" integer [not null]
  "codename" varchar(100) [not null]

Indexes {
  content_type_id [name: "auth_permission_content_type_id_2f476e4b"]
}
}

Table "auth_group" {
  "id" integer [pk, not null, increment]
  "name" varchar(80) [unique, not null]

Indexes {
  name [name: "auth_group_name_a6ea08ec_like"]
}
}

Table "auth_group_permissions" {
  "id" bigint [pk, not null, increment]
  "group_id" integer [not null]
  "permission_id" integer [not null]

Indexes {
  group_id [name: "auth_group_permissions_group_id_b120cbf9"]
  permission_id [name: "auth_group_permissions_permission_id_84c5c92e"]
}
}

Table "auth_user" {
  "id" integer [pk, not null, increment]
  "password" varchar(128) [not null]
  "last_login" timestamp [not null]
  "is_superuser" boolean [not null]
  "username" varchar(30) [unique, not null]
  "first_name" varchar(30) [not null]
  "last_name" varchar(30) [not null]
  "email" varchar(75) [not null]
  "is_staff" boolean [not null]
  "is_active" boolean [not null]
  "date_joined" timestamp [not null]

Indexes {
  username [name: "auth_user_username_6821ab7c_like"]
}
}

Table "auth_user_groups" {
  "id" bigint [pk, not null, increment]
  "user_id" integer [not null]
  "group_id" integer [not null]

Indexes {
  user_id [name: "auth_user_groups_user_id_6a12ed8b"]
  group_id [name: "auth_user_groups_group_id_97559544"]
}
}

Table "auth_user_user_permissions" {
  "id" bigint [pk, not null, increment]
  "user_id" integer [not null]
  "permission_id" integer [not null]

Indexes {
  user_id [name: "auth_user_user_permissions_user_id_a95ead1b"]
  permission_id [name: "auth_user_user_permissions_permission_id_1fbb5f2c"]
}
}

Table "django_content_type" {
  "id" integer [pk, not null, increment]
  "name" varchar(100) [not null]
  "app_label" varchar(100) [not null]
  "model" varchar(100) [not null]
}

Table "django_summernote_attachment" {
  "id" integer [pk, not null, increment]
  "name" varchar(255)
  "file" varchar(100) [not null]
  "uploaded" timestamp [not null]
}

Table "django_session" {
  "session_key" varchar(40) [pk, not null]
  "session_data" text [not null]
  "expire_date" timestamp [not null]

Indexes {
  session_key [name: "django_session_session_key_c0390e0f_like"]
  expire_date [name: "django_session_expire_date_a5c62663"]
}
}

Ref "news_new_categorys_new_id_df3646e1_fk_news_new_id":"news_new"."id" < "news_new_categorys"."new_id"

Ref "news_new_categorys_category_id_7113e576_fk_news_category_id":"news_category"."id" < "news_new_categorys"."category_id"

Ref "django_admin_log_content_type_id_c4bce8eb_fk_django_co":"django_content_type"."id" < "django_admin_log"."content_type_id"

Ref "django_admin_log_user_id_c564eba6_fk_auth_user_id":"auth_user"."id" < "django_admin_log"."user_id"

Ref "auth_permission_content_type_id_2f476e4b_fk_django_co":"django_content_type"."id" < "auth_permission"."content_type_id"

Ref "auth_group_permissions_group_id_b120cbf9_fk_auth_group_id":"auth_group"."id" < "auth_group_permissions"."group_id"

Ref "auth_group_permissio_permission_id_84c5c92e_fk_auth_perm":"auth_permission"."id" < "auth_group_permissions"."permission_id"

Ref "auth_user_groups_user_id_6a12ed8b_fk_auth_user_id":"auth_user"."id" < "auth_user_groups"."user_id"

Ref "auth_user_groups_group_id_97559544_fk_auth_group_id":"auth_group"."id" < "auth_user_groups"."group_id"

Ref "auth_user_user_permissions_user_id_a95ead1b_fk_auth_user_id":"auth_user"."id" < "auth_user_user_permissions"."user_id"

Ref "auth_user_user_permi_permission_id_1fbb5f2c_fk_auth_perm":"auth_permission"."id" < "auth_user_user_permissions"."permission_id"
